[package]
name = "on-a-roll"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "roll"
path = "src/bin/cli/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
diesel = { version = "2.1.4", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
glob = "0.3.1"
