[package]
name = "on-a-roll"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/donbignose/on-a-roll/"

[[bin]]
name = "roll"
path = "src/bin/cli/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
diesel = { version = "2.1.4", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
glob = "0.3.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "upload"
