[package]
name = "on-a-roll"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/donbignose/on-a-roll/"
description = "On a Roll is CLI task manager wriiten in Rust that makes you feel like you are on a roll today!"
license = "MIT"

[[bin]]
name = "roll"
path = "src/bin/cli.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "roll-tui"
path = "src/bin/tui.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
diesel = { version = "2.2.4", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
diesel-derive-enum = { version = "2.1.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
glob = "0.3.1"
ratatui = { version = "0.28.1", features = ["all-widgets"] }
derive_setters = "0.1.6"
strum = { version = "0.26.3", features = ["derive"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "upload"
